# raft-simulation

./: .gitignore  CrashAfterAdd.hs  CrashAfterElect.hs  DSSimulation.hs  FullVisualizer.hs  Main.hs  README.md  RaftFull.hs  RaftSimulation.hs  RaftVisualizer.hs  Simulation.hs  Test.hs  TestIf.hs  TestLens.hs  Util.hs  p3.cabal  results.ipynb
interesting/: append_then_crash.txt
presentation/: custom_beamer.template  header.txt  make.sh  presentation.md
src/: Main.hs  Visualizer.hs
src/Layer/: DS.hs  Event.hs  Raft.hs
src/Layer/DS/: GlobalBehavior.hs  MachineBehavior.hs  Types.hs
src/Scenario/: CRAfterAdd.hs  CrashAfterAdd.hs  CrashAfterElect.hs  CrashBadElect.hs  Partition.hs
src/Visualizer/: Raft.hs
src/old/: RaftSimulation.hs  RaftVisualizer.hs
